examples/test/testpolicy18562.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18562
  namespace: namespace99
spec:
  podSelector:
    matchLabels:
      key46: value45
      key8: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value40
          key20: value31
          key0: value4
      podSelector:
        matchLabels:
          key14: value15
          key3: value8
